src/test/ui/parser/match-arrows-block-then-binop.stderr
error: expected pattern, found `+`
  --> $DIR/match-arrows-block-then-binop.rs:7:9
   |
LL |       } + 5 //~ ERROR expected pattern, found `+`
   |         ^ expected pattern

error: aborting due to previous error

